--- a/LinkedinJobScraper/LinkedinJobScraper.ipynb
+++ b/LinkedinJobScraper/LinkedinJobScraper.ipynb
@@ -44,9 +44,9 @@
     "    GENERAL = 1\n",
     "    GRANULAR = 2\n",
     "    \n",
-    "debug_level = DebugLevel.WARN\n",
+    "debug_level = None\n",
     "debug_company=\"\"\n",
-    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\",\"LanceSoft, Inc.\",\"EV.Careers\",\"Insight Global\",\"Griffin Global Systems, Inc.\",\"Insight Global\",\"EVONA\",\"Steneral Consulting\",\"iHire\",\"TALENT Software Services\",\"Seasoned Recruitment\"]\n",
+    "ignore_list=[\"SynergisticIT\",\"Jobs Malaysia - Two95 HR HUB\",\"Kforce Inc\",\"ICONMA\",\"Get It Recruit - Information Technology\",\"Team Remotely Inc\",\"Ampcus Inc\",\"Genesis10\",\"Intellectt Inc\",\"Stealth\",\"LanceSoft, Inc.\",\"EV.Careers\",\"Insight Global\",\"Griffin Global Systems, Inc.\",\"Insight Global\",\"EVONA\",\"Steneral Consulting\",\"iHire\",\"TALENT Software Services\",\"Seasoned Recruitment\",\"HireMeFast LLC\",\"When I Work\",\"Avid Technology Professionals\"]\n",
     "cookie_value='lang=v=2&lang=en-us; AMCVS_14215E3D5995C57C0A495C55%40AdobeOrg=1; spectroscopyId=596c9ff3-60d0-41e3-85d0-35f6a301a11d; lil-lang=en_US; s_cc=true; li_gp=MTsxNjk1ODI4MzEwOzA=; JSESSIONID=\"ajax:8314525928829728200\"; li_sugr=25841127-ed35-4ab9-8c85-570471870609; at_check=true; dfpfpt=7c7fe9cf02884edfa5a39e7017cfb32b; li_theme=dark; li_theme_set=user; bcookie=\"v=2&cb2fb2a1-4d80-45fc-8516-207f51a51f3e\"; bscookie=\"v=1&202403021342299a907719-a943-42ef-8402-5792074858caAQE5A2dVIE09Qv30nLvy78tZY6gf5eEG\"; liap=true; PLAY_SESSION=eyJhbGciOiJIUzI1NiJ9.eyJkYXRhIjp7ImZsb3dUcmFja2luZ0lkIjoieThwNEdpbUdUMFNVZUxHOXB6a2JmUT09In0sIm5iZiI6MTcxMDU5NDUxOSwiaWF0IjoxNzEwNTk0NTE5fQ.zR1TJu4vkt13WOLRPTwV50YI6uKXf5-UWWpz1X8QgMg; li_ep_auth_context=AFlhcHA9YWNjb3VudENlbnRlckh1YixhaWQ9MjAzNDA1ODI2LGlpZD0yMDMyNzg1MDAscGlkPTE5MjE3ODY2MCxleHA9MTcxMjg3NzAwNTE0OSxjdXI9dHJ1ZQExwAx3K9P0J545UbnU6UvphQmb5A; _guid=420eeedd-0945-4be8-bb3d-7560213e03fb; timezone=America/Vancouver; s_sq=%5B%5BB%5D%5D; s_plt=1.46; s_pltp=developer.linkedin.com%2Fproduct-catalog%2Ftalent; s_ppv=developer.linkedin.com%2Fproduct-catalog%2Ftalent%2C100%2C55%2C1423.5%2C1%2C1; sdsc=22%3A1%2C1716311324586%7EJAPP%2C0dedPjDVh%2BnAliGcpJp0roYoGNuw%3D; li_at=AQEFAHIBAAAAAA8jfCgAAAGOR10hfQAAAY_uskrwVgAAFXVybjpsaTptZW1iZXI6MzM4NDU2NU6brTbPy_8D6pC-LEWNMQWWggzdn90tgsgOGINZ1JiCUwWg0jjZ4fwOCHI8ibezBk-sq2rG0gWHW-ulrvjBzzMhMlq9Vc9YUoPNP2Oe7L6KZhStednWSbMHFDxEMKi0ozXeE3NSqQ_1zMcVxS1Sy8Psa_ecRtrlglvRK8p-WSlgOGV6kfw-eN32XyXFuFvKwHgyBRg; AnalyticsSyncHistory=AQIZphPFkK3ZKQAAAY_Mzq7abzj-6wvwEgRLs0GJCSzxG08LOA_E2744k-Zp5x5TZGw_AnE9lEIEseNrdpFCKw; lms_ads=AQFvxAKBoK1iygAAAY_Mzq9v3DOdlaVZl4qxnR_BD7cXTWpIKFhF2v_tJ4KGNQOfpXbWWzd-IfUly3XlZV7sYqipcUhV80yD; lms_analytics=AQFvxAKBoK1iygAAAY_Mzq9v3DOdlaVZl4qxnR_BD7cXTWpIKFhF2v_tJ4KGNQOfpXbWWzd-IfUly3XlZV7sYqipcUhV80yD; fptctx2=taBcrIH61PuCVH7eNCyH0APzNoEiOrOqF4FbdtfiWWLEKzm%252bX525gSVvOxw6HIhb348dZ6J1N8EuDRt0U2jbG82ZGirLI%252bhHcWa0hlUWdLUPXJFCfJ5w7PthZ7NuHITSyG8i6hWyXkR2x66zZbxKzFN11rsxN3eYrgNtIUhlMWVeBF1S5OSejF9QWpkgnrgpntUiBR7KmqIrTSIIa9KjKeE4dyVvuj3O2%252fT3wUUcVS%252bFKOUFa7ZD6BkrXrm%252fGEDCkuD8oHpH6sA83a8WZOsUC60sKxVfykYg%252bmYz8%252f8%252fSzfEHTEP1VvVAovOpVsO%252fLK8pyIW80Dtsb%252fcMu4eBEwfWMbkWmjlwuuYKmJZdJbC%252bDA%253d; UserMatchHistory=AQJLBw2SJxerMwAAAY_QtvsWhUBlJ5CfWM3192ID3TVM6nwb-UgUr00WbhMhwjEJKuPgcKeeck_ZJYmdqJ1v6B90twjdmoh5hrRQDFjTAG9KjDjBkYVMq68jUxHwblY2z0YSaSe68KjSA8HNO--3yyuFSGWNmTmODCEs6kUyswfs_Uk0PsQQgJyy9MkZIDhSk1n_4oYpVUkcrjlTvAphEwTl2y6VnRNN_laDwx_YefOrXG4b3Os4UbYIDS-ZHGp1MytvWuSLl5Cihf-TE2i5zYlsiS3F1F8R5eOAK-d5tqHzVLmBw3t3Q1HaacbSoGQqstL5ihsDnXVPrJNqCleLRBzV3Inu7p3LJgkZ7xKVNQW0ekvIQw; lidc=\"b=OB65:s=O:r=O:a=O:p=O:g=4802:u=470:x=1:i=1717193606:t=1717266555:v=2:sig=AQEuCN_ZyU-YIDV_x-0QRtE5Gy9QBpeQ\"'\n",
     "headers = {\n",
     "    \"Cookie\": cookie_value\n",
@@ -202,7 +202,6 @@
     "n=1\n",
     "i=0\n",
     "while i<=max_row_default:\n",
-    "#for i in range(0,max_row_default,row_increment_default):\n",
     "    base_url = f\"{base_url_prefix}{i}\"\n",
     "    if debug_level is not None:\n",
     "        print(base_url)\n",
@@ -216,7 +215,6 @@
     "        job_listings = soup.find_all('div', {'class':'job-search-card'})\n",
     "        if n > 1:\n",
     "            n-=1\n",
-    "            print(f\"decrementing n to {n}\")\n",
     "        for job in job_listings:\n",
     "            job_fields = parse_job(job)         \n",
     "            if job_fields['company'] in ignore_list: #these are staffing companies\n",
@@ -231,14 +229,13 @@
     "            else:\n",
     "                upsert_jobs_to_add(job_fields['job_id'],job_fields['company'],job_fields['job_type'],job_fields['title'],job_fields['location'],job_fields['link'],job_fields['date'])\n",
     "    else:\n",
-    "        print(f\"Failed to fetch job listings: {response}\")\n",
     "        if response.status_code==429:\n",
     "            n+=1\n",
-    "            print(f\"retrying after {fibonacci(n)} seconds\")\n",
+    "            print(f\"Seeing 429. Retrying after {fibonacci(n)} seconds\")\n",
     "            time.sleep(fibonacci(n))\n",
-    "            # i=i-row_increment_default*2\n",
     "            continue\n",
     "        else:\n",
+    "            print(f\"Failed to fetch job listings: {response}\")\n",
     "            break"
    ]
   },
